src/raml1/test/data/TCK/raml-1.0/InvalidIncludeTags/test002/api.raml
 #%RAML 1.0
title: test API
types:
  sch: !includesome/arbitrary/path/to/nowhere/example.json
/resource:
  get:
      responses:
        200:
          body:
            application/json:
              type: !includesome/arbitrary/path/to/nowhere/example.json
              example: !includesome/arbitrary/path/to/nowhere/example.json
